@@ -555,7 +555,7 @@
 
 <p>
   The filter-margin properties define the <a href="#FilterEffectsRegion">filter effect region</a>
-  for <a href="#FilterFunction">filter functions</a> such as the 'custom()' function defined in this document.
+  for the <a href="#FilterFunction">filter functions</a> 'custom()'.
   If the filter property references a <a>'filter element'</a> element, then the filter effect
   region defined by the element takes precedence over the 'filter-margin' property.
 </p>
@@ -5648,8 +5648,7 @@ class="element-name">'feCustom'</span></h2>
           The lacuna value is ''filter-box''.
         </p>
         <p class="issue">
-          Is it possible to omit the &lt;box&gt; parameter? It may not include the subregion of previous
-          effects for short hand filters.
+          Are padding-box or content-box needed? Can border-box be the bounding client rect?
         </p>
       </dd>
       <dt>detached | attached</dt>
