@@ -3,6 +3,10 @@ Changes for Filter Effects specification
 
 2012-06-22  Dirk Schulze  <dschulze@adobe.com>
 
+- for now, the filter-margin properties just apply to filter function custom()
+
+2012-06-22  Dirk Schulze  <dschulze@adobe.com>
+
 - added index and property index
 - cleanup of property defintions
 
